--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,10 @@
         "./js/core/ui_compact_outputs.js",
         "./js/core/ui_bindings.js",
         "./js/core/diagnostics.js",
+
+        // ✅ Doctor Scan (READ-ONLY) — mostra relatório e ajuda achar falhas de load/slot
+        "./js/core/doctor_scan.js",
+
         "./js/core/preview_runner.js",
         "./js/core/injector.js",
         "./js/engine/template_registry.js",
