--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,8 @@
   <base href="./" />
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
-  <meta name="rcf-index" content="SAFE_BOOT_2026_02_22" />
+  <meta name="rcf-index" content="SAFE_BOOT_2026_02_23_DOCTOR" />
   <style>
-    /* garante algo visível mesmo se styles.css falhar */
     body{background:#0b1020;color:#eaf0ff;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;}
     .rcf_safe{max-width:920px;margin:0 auto;padding:14px}
     .rcf_card{background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.12);border-radius:16px;padding:14px;margin:12px 0}
@@ -116,11 +115,11 @@
         "./js/core/ui_safety.js",
         "./js/core/ui_compact_outputs.js",
         "./js/core/ui_bindings.js",
-        "./js/core/diagnostics.js",
 
-        // ✅ Doctor Scan (READ-ONLY) — mostra relatório e ajuda achar falhas de load/slot
+        // ✅ DOCTOR (novo)
         "./js/core/doctor_scan.js",
 
+        "./js/core/diagnostics.js",
         "./js/core/preview_runner.js",
         "./js/core/injector.js",
         "./js/engine/template_registry.js",
@@ -147,7 +146,6 @@
     document.getElementById("k").onclick = swStatus;
     document.getElementById("boot").onclick = bootNormal;
 
-    // já mostra status de cara
     swStatus();
   })();
   </script>
