--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <base href="./" />
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
-  <meta name="rcf-index" content="SAFE_BOOT_2026_02_23_DOCTOR" />
+  <meta name="rcf-index" content="SAFE_BOOT_AUTO_2026_02_23" />
   <style>
     body{background:#0b1020;color:#eaf0ff;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;}
     .rcf_safe{max-width:920px;margin:0 auto;padding:14px}
@@ -17,8 +17,11 @@
     .r{background:#ff4d4d;color:#111}
     .g{background:#35d0b5;color:#111}
     .d{background:rgba(255,255,255,.12);color:#eaf0ff;border:1px solid rgba(255,255,255,.18)}
-    pre{white-space:pre-wrap;background:rgba(0,0,0,.35);padding:10px;border-radius:12px;border:1px solid rgba(255,255,255,.10);min-height:140px}
+    pre{white-space:pre-wrap;background:rgba(0,0,0,.35);padding:10px;border-radius:12px;border:1px solid rgba(255,255,255,.10);min-height:160px;max-height:42vh;overflow:auto;-webkit-overflow-scrolling:touch}
     code{background:rgba(255,255,255,.10);padding:2px 6px;border-radius:8px}
+    .muted{opacity:.88}
+    .row{display:flex;flex-wrap:wrap;gap:8px;align-items:center}
+    .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);font-weight:800}
   </style>
 </head>
 
@@ -26,13 +29,20 @@
   <noscript>Ative o JavaScript para usar o app.</noscript>
 
   <div id="app">
-    <div class="rcf_safe">
-      <h2>RCF • SAFE BOOT</h2>
+    <div class="rcf_safe" id="rcfSafeRoot">
+      <h2>RCF • SAFE BOOT (AUTO)</h2>
 
       <div class="rcf_card">
         <div><b>Objetivo:</b> sair da tela preta e recuperar o controle.</div>
-        <div style="opacity:.9;margin-top:6px">
-          Se o boot normal falhar, você ainda consegue limpar SW/cache e ver logs aqui.
+        <div class="muted" style="margin-top:6px">
+          Agora o SAFE BOOT tenta <b>dar boot normal automaticamente</b>.
+          <br/>
+          Pra ficar aqui manual: abra <code>/app/?safe=1</code>.
+        </div>
+
+        <div class="row" style="margin-top:10px">
+          <span class="pill" id="pMode">mode: …</span>
+          <span class="pill" id="pUI">ui: …</span>
         </div>
 
         <button class="rcf_btn r" id="u">Unregister SW</button>
@@ -51,10 +61,21 @@
   <script>
   (function(){
     const L = document.getElementById("log");
-    const log = (...a)=>{ try{ L.textContent += "\n" + a.join(" "); }catch{} };
+    const safeRoot = document.getElementById("rcfSafeRoot");
+    const pMode = document.getElementById("pMode");
+    const pUI = document.getElementById("pUI");
 
+    const log = (...a)=>{ try{ L.textContent += "\n" + a.join(" "); }catch{} };
     const ts = ()=> new Date().toISOString();
-    log("[" + ts() + "] SAFE_BOOT loaded ✅ base=" + document.baseURI);
+
+    const qs = new URLSearchParams(location.search || "");
+    const SAFE_LOCK = (qs.get("safe") === "1");
+
+    function setPill(el, txt){ try{ el.textContent = txt; }catch{} }
+
+    log("[" + ts() + "] SAFE_BOOT_AUTO loaded ✅ base=" + document.baseURI);
+    setPill(pMode, SAFE_LOCK ? "mode: SAFE (lock)" : "mode: AUTO");
+    setPill(pUI, "ui: waiting…");
 
     async function unreg(){
       try{
@@ -115,10 +136,6 @@
         "./js/core/ui_safety.js",
         "./js/core/ui_compact_outputs.js",
         "./js/core/ui_bindings.js",
-
-        // ✅ DOCTOR (novo)
-        "./js/core/doctor_scan.js",
-
         "./js/core/diagnostics.js",
         "./js/core/preview_runner.js",
         "./js/core/injector.js",
@@ -130,7 +147,8 @@
         "./js/admin.github.js",
         "./app.js",
         "./js/core/zip_vault.js",
-        "./js/core/agent_zip_bridge.js"
+        "./js/core/agent_zip_bridge.js",
+        "./js/core/doctor_scan.js"
       ];
 
       for (const src of modules) {
@@ -139,14 +157,50 @@
       }
 
       log("[" + ts() + "] bootNormal finished.");
+      try { window.__RCF_SAFE_BOOT_DONE__ = true; } catch {}
+    }
+
+    // some o SAFE BOOT quando a UI real estiver pronta
+    function watchUI(){
+      const start = Date.now();
+      const timer = setInterval(()=>{
+        const uiReady = !!window.__RCF_UI_READY__;
+        setPill(pUI, uiReady ? "ui: READY ✅" : "ui: loading…");
+
+        if (uiReady) {
+          clearInterval(timer);
+          setTimeout(()=>{
+            try { safeRoot.style.display = "none"; } catch {}
+          }, 120);
+          return;
+        }
+
+        // timeout só pra não ficar infinito (mantém safe visível)
+        if (Date.now() - start > 12000) {
+          clearInterval(timer);
+          setPill(pUI, "ui: timeout (safe stays)");
+          log("[" + ts() + "] UI not ready after 12s — keeping SAFE visible.");
+        }
+      }, 250);
     }
 
     document.getElementById("u").onclick = unreg;
     document.getElementById("c").onclick = clearCaches;
     document.getElementById("k").onclick = swStatus;
-    document.getElementById("boot").onclick = bootNormal;
+    document.getElementById("boot").onclick = ()=>{ bootNormal(); watchUI(); };
 
+    // status inicial
     swStatus();
+
+    // AUTO BOOT (sem clicar) — a não ser que esteja em ?safe=1
+    if (!SAFE_LOCK) {
+      setTimeout(()=>{
+        bootNormal();
+        watchUI();
+      }, 250);
+    } else {
+      log("[" + ts() + "] SAFE LOCK ativo (?safe=1). Auto-boot desativado.");
+    }
   })();
   </script>
 </body>
