--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,11 @@
+<!-- FILE: app/index.html
+     RControl Factory — /app/index.html — vSAFE-AUTOBOOT 2026-02-23
+     ✅ Boot normal automático (entra direto na Factory)
+     ✅ SAFE BOOT só em emergência (fallback automático se boot falhar)
+     ✅ Botão "SAFE" no canto (abre/fecha painel)
+     ✅ Param ?safe=1 força modo SAFE (não faz boot automático)
+     ✅ Sem separadores "=====" fora de comentário
+-->
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -8,50 +16,65 @@
   <base href="./" />
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
-  <meta name="rcf-index" content="SAFE_BOOT_AUTO_2026_02_23b" />
+  <meta name="rcf-index" content="SAFE_AUTOBOOT_2026_02_23" />
   <style>
-    body{background:#0b1020;color:#eaf0ff;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;}
+    /* fallback visual (se styles.css falhar) */
+    :root{color-scheme:dark}
+    body{background:#0b1020;color:#eaf0ff;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:0}
+    .rcf_loading{padding:14px;max-width:920px;margin:0 auto}
+    .rcf_pill{display:inline-block;padding:6px 10px;border-radius:999px;background:rgba(255,255,255,.10);border:1px solid rgba(255,255,255,.14);font-weight:800}
+    .rcf_safe_wrap{position:fixed;inset:0;background:rgba(0,0,0,.55);backdrop-filter:blur(6px);display:none;z-index:999999}
     .rcf_safe{max-width:920px;margin:0 auto;padding:14px}
     .rcf_card{background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.12);border-radius:16px;padding:14px;margin:12px 0}
     .rcf_btn{border:0;border-radius:999px;padding:10px 12px;font-weight:800;margin:6px 8px 0 0}
     .r{background:#ff4d4d;color:#111}
     .g{background:#35d0b5;color:#111}
     .d{background:rgba(255,255,255,.12);color:#eaf0ff;border:1px solid rgba(255,255,255,.18)}
-    pre{
-      white-space:pre-wrap;background:rgba(0,0,0,.35);padding:10px;border-radius:12px;border:1px solid rgba(255,255,255,.10);
-      min-height:160px;max-height:42vh;overflow:auto;-webkit-overflow-scrolling:touch
-    }
+    pre{white-space:pre-wrap;background:rgba(0,0,0,.35);padding:10px;border-radius:12px;border:1px solid rgba(255,255,255,.10);min-height:160px;max-height:50vh;overflow:auto}
     code{background:rgba(255,255,255,.10);padding:2px 6px;border-radius:8px}
-    .muted{opacity:.88}
-    .row{display:flex;flex-wrap:wrap;gap:8px;align-items:center}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);font-weight:800}
+
+    /* botão SAFE flutuante */
+    .rcf_safe_fab{
+      position:fixed;right:10px;bottom:10px;z-index:999998;
+      border-radius:999px;border:1px solid rgba(255,255,255,.18);
+      background:rgba(0,0,0,.35);color:#eaf0ff;font-weight:900;
+      padding:10px 12px;
+    }
   </style>
 </head>
 
 <body>
   <noscript>Ative o JavaScript para usar o app.</noscript>
 
+  <!-- conteúdo normal -->
   <div id="app">
-    <div class="rcf_safe" id="rcfSafeRoot">
-      <h2>RCF • SAFE BOOT (AUTO)</h2>
+    <div class="rcf_loading">
+      <div class="rcf_pill">RCF • carregando…</div>
+      <div style="opacity:.85;margin-top:10px">
+        Se der erro no boot, o modo SAFE abre sozinho.
+      </div>
+    </div>
+  </div>
+
+  <!-- botão SAFE (manual) -->
+  <button class="rcf_safe_fab" id="rcfSafeFab" type="button">SAFE</button>
+
+  <!-- painel SAFE (overlay) -->
+  <div class="rcf_safe_wrap" id="rcfSafeWrap" aria-hidden="true">
+    <div class="rcf_safe">
+      <h2 style="margin:6px 0 0">RCF • SAFE BOOT</h2>
 
       <div class="rcf_card">
-        <div><b>Objetivo:</b> sair da tela preta e recuperar o controle.</div>
-        <div class="muted" style="margin-top:6px">
-          Agora o SAFE BOOT tenta <b>dar boot normal automaticamente</b>.
-          <br/>
-          Pra ficar aqui manual: abra <code>/app/?safe=1</code>.
+        <div><b>Objetivo:</b> recuperar controle (SW/cache/logs) se algo travar.</div>
+        <div style="opacity:.9;margin-top:6px">
+          Dica: abrir <code>/app/?safe=1</code> força ficar só no SAFE (não tenta boot).
         </div>
 
-        <div class="row" style="margin-top:10px">
-          <span class="pill" id="pMode">mode: …</span>
-          <span class="pill" id="pUI">ui: …</span>
-        </div>
-
-        <button class="rcf_btn r" id="u">Unregister SW</button>
-        <button class="rcf_btn r" id="c">Clear Caches</button>
-        <button class="rcf_btn d" id="k">Show SW status</button>
-        <button class="rcf_btn g" id="boot">Boot normal agora</button>
+        <button class="rcf_btn r" id="u" type="button">Unregister SW</button>
+        <button class="rcf_btn r" id="c" type="button">Clear Caches</button>
+        <button class="rcf_btn d" id="k" type="button">Show SW status</button>
+        <button class="rcf_btn g" id="boot" type="button">Tentar boot normal</button>
+        <button class="rcf_btn d" id="closeSafe" type="button">Fechar</button>
       </div>
 
       <div class="rcf_card">
@@ -63,42 +86,40 @@
 
   <script>
   (function(){
-    const L = document.getElementById("log");
-    const safeRoot = document.getElementById("rcfSafeRoot");
-    const pMode = document.getElementById("pMode");
-    const pUI = document.getElementById("pUI");
+    "use strict";
 
-    const log = (...a)=>{ try{ L.textContent += "\n" + a.join(" "); }catch{} };
+    // =========================================================
+    // BOOT LOCK (evita double init por reload/duplo script)
+    // =========================================================
+    if (window.__RCF_INDEX_BOOTED__) return;
+    window.__RCF_INDEX_BOOTED__ = true;
+
+    const $ = (id)=> document.getElementById(id);
+    const L = $("log");
     const ts = ()=> new Date().toISOString();
+    const log = (...a)=>{ try{ L.textContent += "\n" + a.join(" "); }catch{} };
 
-    const qs = new URLSearchParams(location.search || "");
-    const SAFE_LOCK = (qs.get("safe") === "1");
+    const params = new URLSearchParams(location.search || "");
+    const forceSafe = params.get("safe") === "1" || location.hash === "#safe";
 
-    function setPill(el, txt){ try{ el.textContent = txt; }catch{} }
-
-    function hideSafe(reason){
-      try {
-        setPill(pUI, "ui: READY ✅");
-        log("[" + ts() + "] SAFE overlay hide ✅ reason=" + reason);
-      } catch {}
-
-      // remove de verdade pra não bloquear touch/scroll
-      try { safeRoot.style.pointerEvents = "none"; } catch {}
-      try { safeRoot.style.display = "none"; } catch {}
-      try { safeRoot.remove(); } catch {}
+    function showSafe(){
+      const wrap = $("rcfSafeWrap");
+      try{ wrap.style.display = "block"; wrap.setAttribute("aria-hidden","false"); }catch{}
+    }
+    function hideSafe(){
+      const wrap = $("rcfSafeWrap");
+      try{ wrap.style.display = "none"; wrap.setAttribute("aria-hidden","true"); }catch{}
     }
 
-    log("[" + ts() + "] SAFE_BOOT_AUTO loaded ✅ base=" + document.baseURI);
-    setPill(pMode, SAFE_LOCK ? "mode: SAFE (lock)" : "mode: AUTO");
-    setPill(pUI, "ui: waiting…");
+    // FAB toggle
+    $("rcfSafeFab").onclick = ()=> {
+      const wrap = $("rcfSafeWrap");
+      const open = (wrap && wrap.style.display === "block");
+      if (open) hideSafe(); else { showSafe(); swStatus(); }
+    };
+    $("closeSafe").onclick = hideSafe;
 
-    // 🔥 PRINCIPAL: evento real da Factory (app.js / ui bus)
-    // quando disparar, some na hora
-    try {
-      window.addEventListener("RCF:UI_READY", function(){
-        hideSafe("event RCF:UI_READY");
-      }, { once: true });
-    } catch {}
+    log("[" + ts() + "] index loaded ✅ base=" + document.baseURI + " safe=" + forceSafe);
 
     async function unreg(){
       try{
@@ -147,6 +168,7 @@
 
     async function bootNormal(){
       log("[" + ts() + "] bootNormal…");
+
       const modules = [
         "./js/core/logger.js",
         "./js/core/stability_guard.js",
@@ -159,6 +181,7 @@
         "./js/core/ui_safety.js",
         "./js/core/ui_compact_outputs.js",
         "./js/core/ui_bindings.js",
+        "./js/core/doctor_scan.js",
         "./js/core/diagnostics.js",
         "./js/core/preview_runner.js",
         "./js/core/injector.js",
@@ -170,54 +193,57 @@
         "./js/admin.github.js",
         "./app.js",
         "./js/core/zip_vault.js",
-        "./js/core/agent_zip_bridge.js",
-        "./js/core/doctor_scan.js"
+        "./js/core/agent_zip_bridge.js"
       ];
+
+      let failed = 0;
 
       for (const src of modules) {
         try { await loadScript(src); log("loaded ✅", src); }
-        catch(e){ log("failed ❌", src, "::", (e && e.message) ? e.message : String(e)); }
+        catch(e){
+          failed++;
+          log("failed ❌", src, "::", (e && e.message) ? e.message : String(e));
+          // se falhou algo essencial, já abre SAFE
+          showSafe();
+        }
       }
 
-      log("[" + ts() + "] bootNormal finished.");
-      try { window.__RCF_SAFE_BOOT_DONE__ = true; } catch {}
+      log("[" + ts() + "] bootNormal finished. failed=" + failed);
+
+      // fallback extra: se app não “assumir” em X segundos, abre SAFE
+      try{
+        setTimeout(()=>{
+          try{
+            // se não existe algum sinal de app (RCF) depois de um tempo, abre safe
+            const hasRCF = !!(window.RCF || window.__RCF_BOOTED__ || window.__RCF_UI_READY__);
+            if(!hasRCF){
+              log("fallback: no RCF signal -> SAFE");
+              showSafe();
+            }
+          }catch{}
+        }, 2500);
+      }catch{}
     }
 
-    // fallback: polling (caso o evento não dispare por algum motivo)
-    function watchUI(){
-      const start = Date.now();
-      const timer = setInterval(()=>{
-        const uiReady = !!window.__RCF_UI_READY__;
-        setPill(pUI, uiReady ? "ui: READY ✅" : "ui: loading…");
+    $("u").onclick = unreg;
+    $("c").onclick = clearCaches;
+    $("k").onclick = swStatus;
+    $("boot").onclick = bootNormal;
 
-        if (uiReady) {
-          clearInterval(timer);
-          hideSafe("__RCF_UI_READY__");
-          return;
-        }
-
-        if (Date.now() - start > 12000) {
-          clearInterval(timer);
-          setPill(pUI, "ui: timeout (safe stays)");
-          log("[" + ts() + "] UI not ready after 12s — keeping SAFE visible.");
-        }
-      }, 250);
-    }
-
-    document.getElementById("u").onclick = unreg;
-    document.getElementById("c").onclick = clearCaches;
-    document.getElementById("k").onclick = swStatus;
-    document.getElementById("boot").onclick = ()=>{ bootNormal(); watchUI(); };
-
-    swStatus();
-
-    if (!SAFE_LOCK) {
-      setTimeout(()=>{
-        bootNormal();
-        watchUI();
-      }, 150);
+    // =========================================================
+    // START
+    // =========================================================
+    if (forceSafe){
+      showSafe();
+      swStatus();
+      log("SAFE only mode (no autoboot).");
     } else {
-      log("[" + ts() + "] SAFE LOCK ativo (?safe=1). Auto-boot desativado.");
+      // entra direto na Factory (autoboot)
+      try { hideSafe(); } catch {}
+      bootNormal().catch((e)=>{
+        log("bootNormal fatal", (e && e.message) ? e.message : String(e));
+        showSafe();
+      });
     }
   })();
   </script>
